try to save an incoming ( in progress ) and adding some view.

--- a/config/locales/arb/models.yml
+++ b/config/locales/arb/models.yml
@@ -1595,6 +1595,7 @@ arb:
     # product_natures: "Types de produits"
     productable_products: "المنتجات الممكن انتاجها" #?
     # production: "Production"
+    # productions: "Productions"
     products: "المنتجات"
     products_accounts: "حسابات المنتجات" #?
     profession: "المهنة"
