--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -287,6 +287,7 @@ jpn:
       # edit: "Modifier un évènement"
       # index: "Évènements"
       # new: "Nouvel évènement"
+    backend/mineral_matters: #?
     backend/myselves:
       # change_password: "Changer de mot de passe"
       # show: "Mes informations"
