--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -929,6 +929,7 @@ jpn:
     # product_nature: "Product nature"
     # product_natures: "Types de produits"
     # production: "Production"
+    # productions: "Productions"
     # products: "Produits"
     # profession: "Profession"
     # proposer: "Parrain"
