--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -333,6 +333,7 @@ spa:
       # edit: "Modifier un évènement"
       # index: "Évènements"
       # new: "Nouvel évènement"
+    backend/mineral_matters: #?
     backend/myselves:
       # change_password: "Changer de mot de passe"
       # show: "Mes informations"
