--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -380,7 +380,7 @@ fra:
       product_price_template: "Type de prix"
       # product_process: "Product process"
       # product_process_phase: "Product process phase"
-      product_transfer: "Transfert ou perte de Stock"
+      product_transfer: "Transfert ou perte de Stock" #?
       production: "Production"
       # production_support: "Production support"
       profession: "Profession"
@@ -629,7 +629,6 @@ fra:
     depth: "Profondeur"
     derivative_of: "Dérivé de"
     description: "Description"
-    # destination: "Destination"
     detail_payments: "Détailler les paiements"
     diff_less: "Droits enlevés"
     diff_more: "Droits rajoutés"
@@ -742,6 +741,7 @@ fra:
     indirect_links: "Liens indirects"
     # individual: "Individual"
     indivisible: "Indivisible" #?
+    # initial: "Initial"
     initial_number: "Numéro initial"
     integer_value: "Valeur entière"
     introduction: "Introduction"
@@ -770,7 +770,6 @@ fra:
     language: "Langue"
     last_bank_statement: "Dernier relevé bancaire"
     last_cweek: "Dernière semaine"
-    # last_done: "Last done"
     last_journal_entry: "Écriture de fin d’exercice"
     last_letter: "Dernière lettre"
     last_month: "Dernier mois"
@@ -937,6 +936,7 @@ fra:
     planned_at: "Prévu à"
     planned_depreciations: "Amortissements prévus"
     planned_on: "Prévu le"
+    # population_delta: "Population delta"
     position: "Position"
     postcode: "Code postal"
     preferences: "Préférences"
@@ -975,7 +975,7 @@ fra:
     purchase: "Achat"
     purchase_amount: "Montant d’achat"
     # purchase_indicator: "Purchase indicator"
-    # purchase_indicator_unit: "Purchase indicator unit"
+    purchase_indicator_unit: "Purchase indicator unit"
     purchase_invoices: "Factures d’achats"
     purchase_item: "Ligne d’achat"
     purchase_items: "Lignes d’achat"
@@ -1038,7 +1038,7 @@ fra:
     root_model_name: "Racine"
     sale: "Vente"
     # sale_indicator: "Sale indicator"
-    # sale_indicator_unit: "Sale indicator unit"
+    sale_indicator_unit: "Sale indicator unit"
     sale_item: "Ligne de vente"
     sale_items: "Lignes de vente"
     sale_price_listing: "Sale price listing"
@@ -1152,7 +1152,7 @@ fra:
     usage: "Utilisation"
     usage_duration: "Durée d’utilisation (heures)" #?
     # usage_indicator: "Usage indicator"
-    # usage_indicator_unit: "Usage indicator unit"
+    usage_indicator_unit: "Usage indicator unit"
     used_amount: "Montant utilisé" #?
     useful_items: "Lignes utiles"
     user: "Utilisateur"
@@ -1160,6 +1160,8 @@ fra:
     value: "Valeur"
     value_format: "Format de la valeur monétaire" #?
     variables: "Variables"
+    variant: "Variant"
+    # variants: "Variants"
     variety: "Variété"
     vat_number: "Numéro de TVA intra-communautaire"
     vat_subjected: "Assujetti à la TVA"
