--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -941,6 +941,7 @@ jpn:
     # published: "Publié"
     # purchase: "Achat"
     # purchase_amount: "Montant d’achat"
+    # purchase_indicator_unit: "Purchase indicator unit"
     # purchase_invoices: "Factures d’achats"
     # purchase_item: "Ligne d’achat"
     # purchase_items: "Lignes d’achat"
@@ -996,6 +997,7 @@ jpn:
     # root_model: "Racine"
     # root_model_name: "Racine"
     # sale: "Vente"
+    # sale_indicator_unit: "Sale indicator unit"
     # sale_item: "Ligne de vente"
     # sale_items: "Lignes de vente"
     # sale_price_listing: "Sale price listing"
@@ -1095,6 +1097,7 @@ jpn:
     # usable_outgoing_payments: "Décaissements utilisables"
     # usage: "Utilisation"
     # usage_duration: "Durée d’utilisation (heures)"
+    # usage_indicator_unit: "Usage indicator unit"
     # used_amount: "Montant utilisé"
     # useful_items: "Lignes utiles"
     # user: "Utilisateur"
@@ -1102,6 +1105,7 @@ jpn:
     # value: "Valeur"
     # value_format: "Format de la valeur monétaire"
     # variables: "Variables"
+    # variant: "Variant"
     # variety: "Variété"
     # vat_number: "Numéro de TVA intra-communautaire"
     # vat_subjected: "Assujetti à la TVA"
