--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -462,12 +462,7 @@ spa:
     backend/product_species: #?
     backend/product_stock_moves: #?
     backend/product_stocks: #?
-    backend/product_transfers:
-      # confirm: "Transferts à réaliser"
-      # confirm_all: "Confirmer tous les transferts"
-      # edit: "Modifier l’un transfert de stock"
-      # index: "Transferts et pertes de stocks"
-      # new: "Ajouter un transfert ou une perte de stocks"
+    backend/product_transfers: #?
     backend/production_supports: #?
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
@@ -676,7 +671,6 @@ spa:
     # backend/product_price_listings: "Listes de prix"
     # backend/product_price_templates: "Types de prix"
     # backend/product_prices: "Prix des produits"
-    # backend/product_transfers: "Transferts et pertes de stocks"
     backend/production: "Producción" #?
     # backend/products: "Produits"
     # backend/professions: "Professions"
@@ -1108,6 +1102,7 @@ spa:
     # last_milk_result: "Dernières analyses de lait"
     # last_payment_amount: "Montant du dernier encaissement"
     # last_payment_date: "Date du dernier encaissement"
+    # last_procedures: "Dernières procédures"
     # last_products: "Dernières naissances"
     left_balance_amount: "Aplazamiento del credito anterior sin imputar ni reembolsar"
     # letter: "Lettrer"
