--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -941,6 +941,7 @@ jpn:
     # published: "Publié"
     # purchase: "Achat"
     # purchase_amount: "Montant d’achat"
+    # purchase_indicator: "Purchase indicator"
     # purchase_indicator_unit: "Purchase indicator unit"
     # purchase_invoices: "Factures d’achats"
     # purchase_item: "Ligne d’achat"
@@ -997,6 +998,7 @@ jpn:
     # root_model: "Racine"
     # root_model_name: "Racine"
     # sale: "Vente"
+    # sale_indicator: "Sale indicator"
     # sale_indicator_unit: "Sale indicator unit"
     # sale_item: "Ligne de vente"
     # sale_items: "Lignes de vente"
@@ -1097,6 +1099,7 @@ jpn:
     # usable_outgoing_payments: "Décaissements utilisables"
     # usage: "Utilisation"
     # usage_duration: "Durée d’utilisation (heures)"
+    # usage_indicator: "Usage indicator"
     # usage_indicator_unit: "Usage indicator unit"
     # used_amount: "Montant utilisé"
     # useful_items: "Lignes utiles"
@@ -1510,7 +1513,7 @@ jpn:
       informations:
         # with_components: "%{product} (%{unit}) (produit transformé)"
         # without_components: "%{product} (%{unit}) (matière première)"
-      # label: "%{product_nature} (%{unit})"
+      # label: "%{product_nature})"
       # stock_move: "%{origin} (%{code})"
       subscription_label:
         # period: "Abonnement %{subscription_nature} pour %{entity} à l’adresse %{address} du %{start} au %{finish}"
