--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -93,6 +93,8 @@ fra:
         nature: "Nature de la culture"
         reproductor: "Multiplication"
         variety: "Variété"
+      product_indicator_datum:
+        indicator: "Indicateur"
       product_localization:
         arrival_cause: "Cause d’entrée"
         container: "Contenant"
